Fix event participants alignment on mobile

--- a/app/assets/stylesheets/styles/users.css.scss
+++ b/app/assets/stylesheets/styles/users.css.scss
@@ -4,4 +4,14 @@ table tr.partner-row {
 
 .user-card {
   margin-right: 10px;
+
+  @media (max-width: 767px) {
+    margin-right: 0;
+  }
+}
+
+.event-participants {
+  @media (max-width: 767px) {
+    text-align: center;
+  }
 }
